--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,12 +1,12 @@
 PORT = 4000
 
-MONGO_URI =mongodb+srv://yogesh:yogesh@cluster0.roaqyuj.mongodb.net/?retryWrites=true
+MONGO_URI =mongodb+srv://USERNAME:PASSWORD@cluster0.roaqyuj.mongodb.net/?retryWrites=true
 
 FRONTEND_URL=http://localhost:5173
 
 DASHBOARD_URL=http://localhost:5174
 
-JWT_SECRET_KEY= harish
+JWT_SECRET_KEY= MY BROTHER NAME
 
 JWT_EXPIRES=8d
 
@@ -14,6 +14,6 @@ COOKIE_EXPIRE=7
 
 CLOUDINARY_CLOUD_NAME=dprumrtoe
 
-CLOUDINARY_API_SECRET=FeW3BXqkyoiaXk_2_4SBWRX8vdI
+CLOUDINARY_API_SECRET=FeW3BXqkyoiaXk_2_4SBWRX8vd   // I LOVE YOU
 
-CLOUDINARY_API_KEY=574543829838256
+CLOUDINARY_API_KEY=57454382983825 //6234454545 
